test_programs/compile_failure/local_variables_do_not_accept_turbofish/src/main.nr
fn main() {
    let foobar = 1;
    let _ = foobar::<hello, world>;
}
